--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -710,6 +710,7 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 .tab-content-wrapper{background:#FCFCFC;border-top:#2EBEB9 5px solid;border-bottom-right-radius:3px;border-bottom-left-radius:3px;border-top-right-radius:3px;}
 @media screen and (max-width: 600px){
   .alldeals_tabs .tab-content-wrapper, .alldeals_tabs .tab1-content-wrapper{border:none;border-radius:0;} 
+  .alldeals_tabs .tab-content{padding:0;}
 }
 #tab1:checked ~ .tab-content-wrapper #tab-content-1, 
 #tab2:checked ~ .tab-content-wrapper #tab-content-2, 
@@ -748,6 +749,29 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 .for_sns .wrapping .info em.coupon{color:green;}
 .for_sns .wrapping .info em.save_money{color:#ff4d4d;}
 .for_sns .wrapping .info a{color:#08f;font-size:20px;}
+
+
+.insta_wrap{}
+.insta_wrap .card{float:left;width:31.33%;height:415px;margin:10px;border:1px solid #ccc;}
+.insta_wrap .img{width:100%;height:250px;padding:10px;}
+.insta_wrap .img img{width:100%;height:100%;object-fit:contain;}
+.insta_wrap .inner{padding:0 30px;text-align:center;margin-top:15px;}
+.insta_wrap .inner h4{line-height:1.2;height:2.4em;overflow:hidden;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;-webkit-box-orient:vertical;-webkit-line-clamp:2;}
+.insta_wrap .inner p{margin-top:10px;background:#87c442;color:#fff;border-radius:20px;padding:5px 0;font-weight:700;}
+.insta_wrap .inner .pricing{margin-top:15px;}
+.insta_wrap .inner .pricing span{font-size:20px;padding:0 10px;font-weight:bold;}
+.insta_wrap .inner .pricing em:before{content:"\f061";font-family:FontAwesome;font-style:normal;font-weight:normal;text-decoration:inherit;font-size:20px;}
+.insta_wrap .inner .pricing .nth_1{text-decoration:line-through;color:#727272;}
+.insta_wrap .inner .pricing .nth_2{}
+.insta_wrap .inner strong{color:#08f;border-bottom:1px solid #08f;}
+.insta_wrap .inner .where em{text-transform:uppercase;}
+
+
+
+@media screen and (max-width:640px){
+  .insta_wrap .card{float:none;width:100%;margin:20px 0 40px 0;}
+}
+
 
 
 /* Google Translate */
