--- a/app/views/storepromotions/show.html.erb
+++ b/app/views/storepromotions/show.html.erb
@@ -28,9 +28,9 @@
               <%= @storepromotion.impressionist_count %> views
               <div class="sharing">
                 <% if @storepromotion.sp_store_name.present? %>
-                  <p>Available On <%= @storepromotion.sp_store_name %> Now</p>
+                  <p>Available At <%= @storepromotion.sp_store_name %> Now</p>
                 <% else %>
-                  <p>Available On <%= @storepromotion.spcategory.name %> Now</p>
+                  <p>Available At <%= @storepromotion.spcategory.name %> Now</p>
                 <% end %>
                 <p><%= @storepromotion.sp_title %></p>
                 <p>#HotDeals #Coupons #CouponCodes 
