--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -563,7 +563,7 @@ header .gnb_m,header .gnb_open2{display:none;}
 /*.on_off{width:20%;}*/
 .op_wrap{float:left;width:31%;margin:1%;}
 .post-type input, .prime-type input, .coupon-type input, .shipping-type input, .fast-type input{display:none;}
-.post-type input:checked + label, .prime-type input:checked + label, .coupon-type input:checked + label, .shipping-type input:checked + label, .fast-type input:checked + label{background:#08f;color:#fff;}
+.post-type input:checked + label, .prime-type input:checked + label, .coupon-type input:checked + label, .shipping-type input:checked + label, .fast-type input:checked + label{background:#87c442;color:#fff;}
 .prime-type label, .coupon-type label, .shipping-type label, .fast-type label{display:table-cell;padding:10px;text-align:center;border:1px solid #e3e3e3;border-left:none;cursor:pointer;}
 .post-type label{display:inline-block;margin-bottom:10px;padding:10px;text-align:center;border:1px solid #ccc;cursor:pointer;font-size:11px;}
 .swich_on{border-top-right-radius:10px;border-bottom-right-radius:10px;}
