--- a/app/views/storepromotions/_form.html.erb
+++ b/app/views/storepromotions/_form.html.erb
@@ -12,10 +12,10 @@
       <%= f.input :sp_title, label: 'Title of Deal'%>
       <!-- <%= f.input :sp_spare_01, label: 'Korean Title'%> -->
       <div class="pricing clearfix">
-        <%= f.input :sp_spare_40, label: 'List Price' %>
-        <%= f.input :sp_spare_41, label: 'Current Price' %>
+        <!-- <%= f.input :sp_spare_40, label: 'List Price' %> -->
+        <!-- <%= f.input :sp_spare_41, label: 'Current Price' %> -->
         <%= f.input :sp_percentage_01, label: 'Up to Percentage' %>
-        <%= f.input :sp_percentage_02, label: 'Percentage' %>
+        <!-- <%= f.input :sp_percentage_02, label: 'Percentage' %> -->
       </div>
       <div class="pricing clearfix">
         <p>If you don't know "Percentage"</p>
