--- a/app/views/deals/all_deals.html.erb
+++ b/app/views/deals/all_deals.html.erb
@@ -19,7 +19,7 @@
     
       <div class="tab-content-wrapper">
 
-        <div id="tab-content-1" class="tab-content">
+        <!-- <div id="tab-content-1" class="tab-content">
           <div class="all_wrap">
             <div class="common promocodes">
               <h2>오늘의 아마존 할인 코드</h2>
@@ -67,10 +67,10 @@
                 <% end %>
               <span class="check_more"><a target="_blank" href="/hotdeals">핫딜 더보기 www.ohigottabuythis.net/hotdeals</a></span>
             </div>
-          </div><!--./all_wrap-->
-        </div><!--#/tab-content-1-->
+          </div>
+        </div> -->
 
-        <div id="tab-content-2" class="tab-content">
+        <!-- <div id="tab-content-2" class="tab-content">
           <div class="all_wrap">
             <div class="common promocodes">
               <h2>Today's Promo Codes On Amazon</h2>
@@ -112,8 +112,8 @@
                 <% end %>
               <span class="check_more"> <a target="_blank" href="/hotdeals">Check More Bargain: www.ohigottabuythis.net/hotdeals</a></span>
             </div>
-          </div><!--./all_wrap-->
-        </div><!--#/tab-content-2-->
+          </div>
+        </div> -->
 
         <div id="tab-content-3" class="tab-content">
           <div class="insta_wrap clearfix">
@@ -195,7 +195,7 @@
           
         </div><!--#/tab-content-3-->
 
-        <div id="tab-content-4" class="tab-content">
+        <!-- <div id="tab-content-4" class="tab-content">
           <div class="all_wrap">
             <div class="common promocodes">
               <p class="category">For SNS</p>
@@ -234,7 +234,7 @@
               <% end %>
             </div>
           </div>
-        </div>        
+        </div>   -->      
 
         <div id="tab-content-5" class="tab-content">
           <!-- <p>For Naver</p> -->
