--- a/app/views/deals/_header_store.html.erb
+++ b/app/views/deals/_header_store.html.erb
@@ -4,7 +4,7 @@
     <div class="sub_nav_pc">
       <ul class="clearfix">
         <!-- <li><a href="/deals/stores">Home</a></li> -->
-        <li class="coumos1"><a href="/storepromotions">Sales & Promotions</a></li>
+        <li class="coumos1"><a href="/storepromotions">Deals & Promotions</a></li>
         <!-- <li><a href="/storedeals">Bargains By Store</a></li> -->
         <!-- <li><a href="/deals/most_reviewed">Most-Reviewed</a></li>
         <li class="coumos" ><a href="/deals/promotions">Sales Offer & Promotions</a></li>
