--- a/app/views/storepromotions/_table.html.erb
+++ b/app/views/storepromotions/_table.html.erb
@@ -9,7 +9,7 @@
     <td>Affiliate_Link</td>
     <td>Logo_Link</td>
   </tr> -->
-  <tr><td>SSENSE</td><td>https://bit.ly/33SJ7wj</td><td>https://i.pinimg.com/564x/c0/7e/31/c07e318fc0cbf0d61ad55332d7cf6c12.jpg</td></tr>
+  <tr><td>Sephora</td><td>https://bit.ly/33SJ7wj</td><td>https://i.pinimg.com/564x/83/d5/c1/83d5c101c635bffedde93fe37d5ffb11.jpg</td></tr>
   <tr>
    <td>Nordstrom Rack</td>
    <td>https://bit.ly/2YOoM9e</td>
@@ -82,7 +82,7 @@
   <tr><td>neiman marcus</td><td>https://bit.ly/2JeLYag</td><td>https://i.pinimg.com/564x/31/72/00/3172003e15701d2b725025e8b9d3025e.jpg</td></tr>
   <tr><td>bloomingdales</td><td>https://bit.ly/2JDQ5zl</td><td>https://i.pinimg.com/564x/1a/1a/82/1a1a82c06bb914532c766e730f5ada10.jpg</td></tr>
   <tr><td>Target</td><td>https://bit.ly/2XpCrXO</td><td>https://i.pinimg.com/564x/57/5a/ab/575aab6da6e3ee8e3d5b9a2d74e784e8.jpg</td></tr>
-  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
+  <tr><td>Saks Off 5th</td><td>Affiliate_Link</td><td>https://i.pinimg.com/564x/d0/4f/a5/d04fa5f4da0f824439bb29b440517cb9.jpg</td></tr>
   <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
   <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
   <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
