--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -165,10 +165,11 @@
 }
 
 /* Index Page */
-.dealpage_title{font-family: 'Righteous', cursive;}
-.dealpage_title p{position:relative;font-size:70px;}
-.dealpage_title p:after,
-.deals_code_main_menu ul .nth_2 a:after{position:absolute;height:10px;content:'';background:#000;width:100%;top:69.2%;margin-left:10px;-webkit-transform:translateY(-5px);transform:translateY(-5px);}
+.dealpage_title{font-family: 'Righteous', cursive;margin-top:80px;}
+.dealpage_title p{position:relative;font-size:55px;}
+/*.dealpage_title p:after,
+.deals_code_main_menu ul .nth_2 a:after{position:absolute;height:10px;content:'';background:#000;width:100%;top:69.2%;margin-left:10px;-webkit-transform:translateY(-5px);transform:translateY(-5px);}*/
+.sd_com{margin:0;}
 .more_search{margin-top:15px;}
 .more_search input{width:35%;height:40px;padding:0 10px;}
 
