--- a/app/views/shared/_footer2.html.erb
+++ b/app/views/shared/_footer2.html.erb
@@ -20,7 +20,7 @@
           <li><a href="/deals/bestdeals">#Bargain Of Amazon</a></li>
           <li><a href="/deals/stores">#Bargain By Store</a></li>
           <!-- <li><a href="/deals/most_reviewed">#Most-Reviewed</a></li> -->
-          <li><a href="/deals/quick_search">#Amazon HotDeals Finder</a></li>
+          <li><a href="/deals/quick_search">#Amazon Deals Finder</a></li>
           <!-- <li><a href="/deals/promotions">#Promotions</a></li> -->
           <li><a href="/messages">#About US</a></li>
           <!-- <li><a href="/messages/new">#Contact US</a></li> -->
