--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -766,10 +766,18 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 .insta_wrap .inner strong{color:#08f;border-bottom:1px solid #08f;}
 .insta_wrap .inner .where em{text-transform:uppercase;}
 
+/* Marketing Page */
+.marketing_menu{margin:80px 0 30px 0;}
+.marketing_menu ul{}
+.marketing_menu ul li{float:left;margin-left:20px;}
+.marketing_menu ul li a{background:#08f;border-radius:10px;color:#fff;padding:5px 10px;}
+.lotto{font-size:30px;}
+
 
 
 @media screen and (max-width:640px){
   .insta_wrap .card{float:none;width:100%;margin:20px 0 40px 0;}
+  .marketing_menu ul li{float:left;margin-left:5px;}
 }
 
 
@@ -814,5 +822,11 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 .amz_slider_banner .left p{font-size:47px;line-height:1.1;padding:50px 0 10px 0;}
 .amz_slider_banner .left span{font-size:40px;line-height:1.1;}
 .amz_slider_banner .right{float:left;width:60%;}*/
+
+
+
+
+
+
 
 
