--- a/app/views/deals/categories.html.erb
+++ b/app/views/deals/categories.html.erb
@@ -6,8 +6,12 @@
       <div class="category_body clearfix">
         <div class="left">
           <ul>
-            <div class="middle_box_insta"><a target="_blank" href="/storepromotions"><img src="<%=asset_path 'store_deals.png' %>" alt="Save $10 when you spend $100" /></a></div>
-            <div class="middle_box_insta"><a target="_blank" href="/deals/bestdeals"><img src="<%=asset_path 'amazon_deals.png' %>" alt="Save $10 when you spend $100" /></a></div>
+            <!-- <div class="middle_box_insta"><a target="_blank" href="/storepromotions"><img src="<%=asset_path 'store_deals.png' %>" alt="" /></a></div>
+            <div class="middle_box_insta"><a target="_blank" href="/deals/bestdeals"><img src="<%=asset_path 'amazon_deals.png' %>" alt="" /></a></div> -->
+            <li><a href="/deals/quick_search"># Amazon Deal Finder</a></li>
+            <li><a href="/deals/bestdeals"># Today's Deals of Amazon</a></li>
+            <li><a href="/deals/promo_codes"># Today's Coupon of Amazon</a></li>
+            <li><a href="/storepromotions"># Today's Deals by Store</a></li>
             <!-- <li><a href="/storepromotions"># Bargain By Store</a></li>
             <li><a href="/deals/bestdeals"># Best Deals Of Amazon</a></li>
             <li><a href="/deals/promo_codes"># Coupon Of Amazon</a></li>
