--- a/app/views/deals/categories.html.erb
+++ b/app/views/deals/categories.html.erb
@@ -6,26 +6,12 @@
       <div class="category_body clearfix">
         <div class="left">
           <ul>
-            <!-- <div class="middle_box_insta"><a target="_blank" href="/storepromotions"><img src="<%=asset_path 'store_deals.png' %>" alt="" /></a></div>
-            <div class="middle_box_insta"><a target="_blank" href="/deals/bestdeals"><img src="<%=asset_path 'amazon_deals.png' %>" alt="" /></a></div> -->
             <li><a href="/deals/quick_search"># Amazon Deal Finder</a></li>
             <li><a href="/deals/bestdeals"># Today's Deals of Amazon</a></li>
-            <li><a href="/deals/promo_codes"># Today's Coupon of Amazon</a></li>
+            <li><a href="/deals/promo_codes"># Today's Codes of Amazon</a></li>
             <li><a href="/storepromotions"># Today's Deals by Store</a></li>
-            <!-- <li><a href="/storepromotions"># Bargain By Store</a></li>
-            <li><a href="/deals/bestdeals"># Best Deals Of Amazon</a></li>
-            <li><a href="/deals/promo_codes"># Coupon Of Amazon</a></li>
-            <li><a href="/deals/most_reviewed"># Most-Reviewed</a></li>
-            <li><a href="/deals/quick_search"># HotDeal Finder</a></li>           -->  
           </ul>
-        </div>
-
-        <!-- <div class="right">
-          <ul>
-            <li><a href="/recommends"># Editor's Pick</a></li>
-            <li><a href="/"># Gadgets</a></li>
-          </ul>
-        </div> -->
+        </div>        
       </div>
     </div>
 
