--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -465,7 +465,8 @@ header .gnb_m,header .gnb_open2{display:none;}
 .contact_form .m_mail{margin-left:2%;}
 .contact_form p{margin-bottom:10px;}
 .contact_form .btn{width:100px;padding:5px 10px;background:#08f;color:#fff;border:1px solid transparent;border-radius:5px;}
-.field_with_errors .error{position:absolute;top:193px;right:250px;color:red;}/* email validates */
+.field_with_errors .error{/*position:absolute;top:193px;right:250px*/;color:red;}/* email validates */
+.error_notification{color:red;}
 #message_m_spare_02{margin-bottom:5px;background:#000;color:#fff;}
 
 /*Message Show Section*/
