--- a/app/views/storepromotions/_table.html.erb
+++ b/app/views/storepromotions/_table.html.erb
@@ -83,8 +83,9 @@
   <tr><td>bloomingdales</td><td>https://bit.ly/2JDQ5zl</td><td>https://i.pinimg.com/564x/1a/1a/82/1a1a82c06bb914532c766e730f5ada10.jpg</td></tr>
   <tr><td>Target</td><td>https://bit.ly/2XpCrXO</td><td>https://i.pinimg.com/564x/57/5a/ab/575aab6da6e3ee8e3d5b9a2d74e784e8.jpg</td></tr>
   <tr><td>Saks Off 5th</td><td>Affiliate_Link</td><td>https://i.pinimg.com/564x/d0/4f/a5/d04fa5f4da0f824439bb29b440517cb9.jpg</td></tr>
-  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
-  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
+  <tr><td>Ann Taylor</td><td>https://bit.ly/33mS7tf
+  </td><td>https://i.pinimg.com/564x/82/22/31/8222316ec63dc099382f1aef2f9f8ae8.jpg</td></tr>
+  <tr><td>backcountry</td><td>https://bit.ly/2MiNfSq</td><td>https://i.pinimg.com/564x/c2/ea/bb/c2eabb576284e316285afa13a46b9a81.jpg</td></tr>
   <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
   <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
   <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
