--- a/app/views/deals/_body_hotdeals.html.erb
+++ b/app/views/deals/_body_hotdeals.html.erb
@@ -42,9 +42,10 @@
       </span>
     <% end %>
     <% if hotdeal.h_spare_63.present? %>
-     <span class="shipping_condition"><a target="_blank" href="https://amzn.to/2uvHHM2">Take "Amazon Prime" to save Shipping and handling fee.</a><i></i></span>
+     <span class="shipping_condition">Free Shipping: $25+ of eligible items, fulfilled by Amazon or <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a></span>
+     <!-- <span class="shipping_condition"><a target="_blank" href="https://amzn.to/2uvHHM2">Take "Amazon Prime" to save Shipping and handling fee.</a><i></i></span> -->
     <% else %>
-     <span class="shipping_condition">Free Shipping: Free Shipping: $25+ of eligible items, fulfilled by Amazon or <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a></span>
+     
     <% end %>
     <!-- <p><a target="_blank" href="<%= hotdeal.h_link %>"><%= hotdeal.h_title %></a></p> -->
 
@@ -70,13 +71,13 @@
               <% else %>
                 <% if hotdeal.h_spare_61.present? %>
                   <% if hotdeal.h_spare_61.present? %>
-                    <em>w/ <%= number_to_percentage(hotdeal.h_spare_61, precision: 0) %> Coupon</em>
+                    <em>+ <%= number_to_percentage(hotdeal.h_spare_61, precision: 0) %> Off Coupon</em>
                   <% else %>
                     <!-- <em>-</em> -->
                   <% end %>
                 <% else %>
                   <% if hotdeal.h_spare_62.present? %>
-                    <em>w/ <%= number_to_currency(hotdeal.h_spare_62) %> Coupon</em>
+                    <em>+ <%= number_to_currency(hotdeal.h_spare_62) %> Off Coupon</em>
                   <% else %>
                     <!-- <em>-</em> -->
                   <% end %>
