--- a/app/views/deals/_body_promocodes.html.erb
+++ b/app/views/deals/_body_promocodes.html.erb
@@ -30,9 +30,10 @@
         <% end %>
       </span>
       <% if promocode.p_spare_54.present? %>
-        <span class="shipping_condition"><a target="_blank" href="https://amzn.to/2uvHHM2">Take "Amazon Prime" to save Shipping and handling fee.</a><i></i></span>
-      <% else %>
         <span class="shipping_condition">Free Shipping: $25+ of eligible items, fulfilled by Amazon or <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a></span>
+        <!-- <span class="shipping_condition"><a target="_blank" href="https://amzn.to/2uvHHM2">Take "Amazon Prime" to save Shipping and handling fee.</a><i></i></span> -->
+      <% else %>
+        
       <% end %>
       
       <!-- <p><a target="_blank" href="<%= promocode.p_link %>"><%= promocode.p_title %></a></p> -->
@@ -53,13 +54,13 @@
           <% else %>
             <% if promocode.p_spare_55.present? %>
               <% if promocode.p_spare_55.present? %>
-                <em>w/ <%= number_to_percentage(promocode.p_spare_55, precision: 0) %> Coupon</em>
+                <em>+ <%= number_to_percentage(promocode.p_spare_55, precision: 0) %> Off Coupon</em>
               <% else %>
                 <!-- <em>-</em> -->
               <% end %>
             <% else %>
               <% if promocode.p_spare_56.present? %>
-                <em>w/ <%= number_to_currency(promocode.p_spare_56) %> Coupon</em>
+                <em>+ <%= number_to_currency(promocode.p_spare_56) %> Off Coupon</em>
               <% else %>
                 <!-- <em>-</em> -->
               <% end %>
