--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -35,6 +35,7 @@
   .codes .lt_cnt .most_hotdeal .numbering{background:#000;color:#fff;text-align:center;width:20%;border-radius:7px;position:absolute;top:0;left:0;}
   .codes .lt_cnt .most_hotdeal{padding:10px 0;border-bottom:1px solid #ccc;}
   .codes .lt_cnt .most_hotdeal .image{float:left;width:39%;margin-right:1%;position:relative;}
+  .codes .lt_cnt .most_hotdeal .image .image_box a{display:block;}
   .codes .lt_cnt .most_hotdeal .image img{width:100%;height:100px;object-fit:contain;}
   .codes .lt_cnt .most_hotdeal .inner{float:left;width:59%;margin-left:1%;padding-left:10px;}
   .codes .lt_cnt .most_hotdeal .inner p{font-size:12px;line-height:1.4;height:4.2em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;word-break:break-all;-webkit-box-orient:vertical;-webkit-line-clamp:3}
@@ -212,9 +213,10 @@
   .codes .lt_cnt .most_h_wrap .most_h_tit{font-size:20px;}
   .codes .lt_cnt .most_h_wrap .bottom_line{background:#000;padding:15px 0;text-align:center;font-family: 'Anton', sans-serif;}
   .codes .lt_cnt .most_h_wrap .bottom_line a{text-decoration:none;color:#fff;display:block;font-size:20px;letter-spacing:2px;}
-  .codes .lt_cnt .most_hotdeal .numbering{display:block;background:#000;color:#fff;text-align:center;width:10%;border-radius:7px;}
+  .codes .lt_cnt .most_hotdeal .numbering{display:block;background:#000;color:#fff;text-align:center;width:10%;border-radius:7px;position:absolute;top:0;left:0;}
   .codes .lt_cnt .most_hotdeal{padding:10px 0;border-bottom:1px solid #ccc;}
-  .codes .lt_cnt .most_hotdeal .image{float:left;width:39%;margin-right:1%;}
+  .codes .lt_cnt .most_hotdeal .image{float:left;width:39%;margin-right:1%;position:relative;}
+  .codes .lt_cnt .most_hotdeal .image .image_box a{display:block;}
   .codes .lt_cnt .most_hotdeal .image img{width:100%;}
   .codes .lt_cnt .most_hotdeal .inner{float:left;width:59%;margin-left:1%;padding-left:10px;}
   .codes .lt_cnt .most_hotdeal .inner p{font-size:12px;line-height:1.4;height:4.2em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;word-break:break-all;-webkit-box-orient:vertical;-webkit-line-clamp:3}
