--- a/app/views/deals/categories.html.erb
+++ b/app/views/deals/categories.html.erb
@@ -7,8 +7,8 @@
         <div class="left">
           <ul>
             <li><a href="/deals/quick_search"># Amazon Deal Finder</a></li>
-            <li><a href="/deals/bestdeals"># Today's Deals of Amazon</a></li>
-            <li><a href="/deals/promo_codes"># Today's Codes of Amazon</a></li>
+            <li><a href="/hotdeals"># Today's Deals of Amazon</a></li>
+            <li><a href="/promocodes"># Today's Codes of Amazon</a></li>
             <li><a href="/storepromotions"># Today's Deals by Store</a></li>
           </ul>
         </div>        
