--- a/app/views/deals/_set_search.html.erb
+++ b/app/views/deals/_set_search.html.erb
@@ -72,7 +72,7 @@
   <div class="option_wrap clearfix">
     <div class="option_box op_wrap">
       <p>with Amazon Prime</p>
-      <div class="prime-type on_off clearfix">
+      <div class="prime-type on_off common clearfix">
         <input id="off" name="prime-type" type="radio" value="" checked>
         <label class="first swich_off" for="off">OFF</label>
 
@@ -84,7 +84,7 @@
 
     <div class="option_box op_wrap">  
       <p>with Free Shipping</p>
-      <div class="shipping-type on_off clearfix">
+      <div class="shipping-type on_off common clearfix">
         <input id="shipping_off" name="shipping-type" type="radio" value="" checked>
         <label class="first swich_off" for="shipping_off">OFF</label>
 
@@ -95,7 +95,7 @@
 
     <div class="option_box op_wrap">  
       <p>with Coupons</p>
-      <div class="coupon-type on_off clearfix">
+      <div class="coupon-type on_off common clearfix">
         <input id="coupon_off" name="coupon-type" type="radio" value="" checked>
         <label class="first swich_off" for="coupon_off">OFF</label>
 
@@ -103,6 +103,29 @@
         <label for="coupon" class="swich_on">ON</label>
       </div>
     </div>
+
+   <!--  <div class="option_box op_wrap">  
+      <p>Get it by tomorrow</p>
+      <div class="fast-type on_off clearfix">
+        <input id="coupon_off" name="fast-type" type="radio" value="" checked>
+        <label class="first swich_off" for="coupon_off">OFF</label>
+
+        <input id="fast" name="fast-type" type="radio" value="2231352011">
+        <label for="fast" class="swich_on">ON</label>
+      </div>
+    </div> -->
+
+    <div class="option_box op_wrap">  
+      <p>International Shipping</p>
+      <div class="oversea-type on_off common clearfix">
+        <input id="coupon_off" name="oversea-type" type="radio" value="" checked>
+        <label class="first swich_off" for="coupon_off">OFF</label>
+
+        <input id="oversea" name="oversea-type" type="radio" value="p_n_shipping_option-bin%3A3242350011&dc&qid=1582884089&rnid=2944662011">
+        <label for="oversea" class="swich_on">ON</label>
+      </div>
+    </div>
+
 
     <a class="set_reset_m" href="/deals/quick_search">Reset</a>
 
@@ -124,7 +147,7 @@
     <a class="set_reset" href="/deals/quick_search">Reset</a>
     <button class="search">Find Deals</button>
   </div>
-</div>
+</div><!--set_search_box-->
 
 
 
