--- a/app/views/deals/_set_search.html.erb
+++ b/app/views/deals/_set_search.html.erb
@@ -71,8 +71,8 @@
 
   <div class="option_wrap clearfix">
     <div class="option_box op_wrap">
-      <p>with Amazon Prime</p>
-      <div class="prime-type on_off common clearfix">
+      <p>w/ Amazon Prime</p>
+      <div class="prime-type on_off clearfix">
         <input id="off" name="prime-type" type="radio" value="" checked>
         <label class="first swich_off" for="off">OFF</label>
 
@@ -83,8 +83,8 @@
     </div>
 
     <div class="option_box op_wrap">  
-      <p>with Free Shipping</p>
-      <div class="shipping-type on_off common clearfix">
+      <p>w/ Free Shipping</p>
+      <div class="shipping-type on_off clearfix">
         <input id="shipping_off" name="shipping-type" type="radio" value="" checked>
         <label class="first swich_off" for="shipping_off">OFF</label>
 
@@ -94,8 +94,8 @@
     </div>
 
     <div class="option_box op_wrap">  
-      <p>with Coupons</p>
-      <div class="coupon-type on_off common clearfix">
+      <p>w/ Coupons</p>
+      <div class="coupon-type on_off clearfix">
         <input id="coupon_off" name="coupon-type" type="radio" value="" checked>
         <label class="first swich_off" for="coupon_off">OFF</label>
 
@@ -118,30 +118,32 @@
       </div> -->
 
       <div class="option_box op_wrap">  
-        <p>International Shipping</p>
-        <div class="oversea-type on_off common clearfix">
-          <input id="coupon_off" name="oversea-type" type="radio" value="" checked>
+        <p>w/ International Shipping</p>
+        <div class="oversea-type on_off clearfix">
+          <input id="oversea_off" name="oversea-type" type="radio" value="" checked>
           <label class="first swich_off" for="oversea_off">OFF</label>
 
           <input id="oversea" name="oversea-type" type="radio" value="p_n_shipping_option-bin%3A3242350011&dc&qid=1582884089&rnid=2944662011">
           <label for="oversea" class="swich_on">ON</label>
         </div>
       </div>
+
+      <div class="option_box op_wrap">  
+        <p>w/ Subscribe & Save</p>
+        <div class="subscribe-type on_off clearfix">
+          <input id="subscribe_off" name="subscribe-type" type="radio" value="" checked>
+          <label class="first swich_off" for="subscribe_off">OFF</label>
+
+          <input id="subscribe" name="subscribe-type" type="radio" value="p_n_is_sns_available%3A2617006011&dc&qid=1582885888&rnid=2617005011">
+          <label for="subscribe" class="swich_on">ON</label>
+        </div>
+      </div>
+
     <% end %>
 
 
     <a class="set_reset_m" href="/deals/quick_search">Reset</a>
 
-    <!-- <div class="option_box op_wrap">  
-      <p>Get it by tomorrow</p>
-      <div class="fast-type on_off clearfix">
-        <input id="fast_off" name="fast-type" type="radio" value="" checked>
-        <label class="first swich_off" for="fast_off">OFF</label>
-
-        <input id="fast" name="fast-type" type="radio" value="p_90%3A8308921011&dc&qid=1581933181&rnid=8308919011&ref=sr_nr_p_90_1">
-        <label for="fast" class="swich_on">ON</label>
-      </div>
-    </div> -->
   </div><!--option_wrap-->
 
   
