marketing insta for tablet

--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -776,10 +776,12 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 .lotto{font-size:30px;}
 
 
-
 @media screen and (max-width:640px){
   .insta_wrap .card{float:none;width:100%;margin:20px 0 40px 0;}
   .marketing_menu ul li{float:left;margin-left:5px;}
+}
+@media screen and (min-width:641px) and (max-width:1199px){
+  .insta_wrap .card{width:47%;} 
 }
 
 
